[gd_scene load_steps=9 format=2]

[ext_resource path="res://props/crate/crate.gd" type="Script" id=1]
[ext_resource path="res://props/crate/crate_normal.png" type="Texture" id=2]
[ext_resource path="res://props/crate/crate_electro.png" type="Texture" id=3]
[ext_resource path="res://props/crate/bullet_hitcrate.wav" type="AudioStream" id=4]
[ext_resource path="res://props/crate/drop_crate.wav" type="AudioStream" id=5]
[ext_resource path="res://props/blocks/shadow.png" type="Texture" id=6]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "electro",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 15.95, 15.99 )

[node name="Crate" type="KinematicBody2D" groups=["crates"]]
z_index = 2
z_as_relative = false
collision_layer = 4
collision_mask = 319
collision/safe_margin = 0.001
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
playing = true

[node name="Shadow" type="Sprite" parent="Sprite"]
modulate = Color( 1, 1, 1, 0.27451 )
show_behind_parent = true
position = Vector2( 2, 2 )
z_as_relative = false
texture = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="BulletHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="DropCrate" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
